Fix alignment of icon and instructions for guessMovement

--- a/src/css/story/guessMovement.styl
+++ b/src/css/story/guessMovement.styl
@@ -13,7 +13,7 @@
 			font-family $sans
 			line-height 1.5rem
 			display flex
-			align-items center
+			// align-items center
 			img
 				width 36px
 				height 36px
